refactor to latest version of CXF